# vips-rs

./: Cargo.toml
examples/: resize.rs
src/: lib.rs
src/image/: mod.rs
